upload page contacto + css correspondiente

--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,46 @@ body {
   color: #FC7300;
 }
 
+.form {
+  padding: 15px;
+  margin-bottom: 10px;
+  border: 1px solid #666;
+  border-radius: 8px;
+  box-shadow: 4px 3px 8px 2px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 4px 3px 8px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 3px 8px 2px rgba(0, 0, 0, 0.75);
+}
+
+.form textarea {
+  resize: none;
+}
+
+.group-form {
+  margin-bottom: 20px;
+}
+.group-form label {
+  font-weight: 700;
+  font-family: "Belanosima", sans-serif;
+  font-size: 1.2em;
+  color: #1F8A70;
+}
+.group-form input, .group-form textarea {
+  border: 2px solid #00425A;
+}
+
+.div-button {
+  margin-top: 20px;
+}
+
+.btn-enviar {
+  border: 2px solid #181823;
+}
+
+.btn-enviar:hover {
+  background-color: #FC7300;
+  border: 2px solid #fff7f7;
+}
+
 @media (min-width: 769px) and (max-width: 1024px) {
   .card_propuesta {
     width: 40%;
